chore: enforce the checkstyle (#330)