@@ -1,5 +1,19 @@
 package com.salesforce.multicloudj.blob.gcp.async;
 
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
 import com.google.api.gax.paging.Page;
 import com.google.cloud.storage.Blob;
 import com.google.cloud.storage.Storage;
@@ -15,9 +29,8 @@ import com.salesforce.multicloudj.blob.driver.DirectoryDownloadResponse;
 import com.salesforce.multicloudj.blob.driver.DirectoryUploadRequest;
 import com.salesforce.multicloudj.blob.driver.DirectoryUploadResponse;
 import com.salesforce.multicloudj.blob.driver.DownloadRequest;
-import com.salesforce.multicloudj.blob.driver.FailedBlobDownload;
-import com.salesforce.multicloudj.blob.driver.FailedBlobUpload;
 import com.salesforce.multicloudj.blob.driver.DownloadResponse;
+import com.salesforce.multicloudj.blob.driver.FailedBlobUpload;
 import com.salesforce.multicloudj.blob.driver.ListBlobsBatch;
 import com.salesforce.multicloudj.blob.driver.ListBlobsRequest;
 import com.salesforce.multicloudj.blob.driver.MultipartPart;
@@ -34,28 +47,15 @@ import com.salesforce.multicloudj.blob.gcp.GcpTransformer;
 import com.salesforce.multicloudj.blob.gcp.GcpTransformerSupplier;
 import com.salesforce.multicloudj.common.exceptions.SubstrateSdkException;
 import com.salesforce.multicloudj.common.gcp.GcpConstants;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.mockito.junit.jupiter.MockitoSettings;
-import org.mockito.quality.Strictness;
-
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
-import java.io.IOException;
 import java.net.URL;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.Duration;
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -66,834 +66,838 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
-
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
 class GcpAsyncBlobStoreTest {
 
-    @Mock
-    private AbstractBlobStore mockBlobStore;
+  @Mock private AbstractBlobStore mockBlobStore;
 
-    @Mock
-    private Storage mockStorage;
+  @Mock private Storage mockStorage;
 
-    @Mock
-    private GcpTransformerSupplier mockTransformerSupplier;
+  @Mock private GcpTransformerSupplier mockTransformerSupplier;
 
-    private ExecutorService executorService;
-    private GcpAsyncBlobStore gcpAsyncBlobStore;
+  private ExecutorService executorService;
+  private GcpAsyncBlobStore gcpAsyncBlobStore;
 
-    private static final String TEST_BUCKET = "test-bucket";
-    private static final String TEST_REGION = "us-central1";
-    private static final String TEST_KEY = "test-key";
-    private static final String TEST_VERSION_ID = "test-version";
+  private static final String TEST_BUCKET = "test-bucket";
+  private static final String TEST_REGION = "us-central1";
+  private static final String TEST_KEY = "test-key";
+  private static final String TEST_VERSION_ID = "test-version";
 
-    @BeforeEach
-    void setUp() {
-        executorService = Executors.newFixedThreadPool(2);
-        gcpAsyncBlobStore = new GcpAsyncBlobStore(mockBlobStore, executorService, mockStorage, mockTransformerSupplier);
+  @BeforeEach
+  void setUp() {
+    executorService = Executors.newFixedThreadPool(2);
+    gcpAsyncBlobStore =
+        new GcpAsyncBlobStore(mockBlobStore, executorService, mockStorage, mockTransformerSupplier);
+  }
+
+  @AfterEach
+  void tearDown() {
+    executorService.shutdown();
+    try {
+      if (!executorService.awaitTermination(5, TimeUnit.SECONDS)) {
+        executorService.shutdownNow();
+      }
+    } catch (InterruptedException e) {
+      executorService.shutdownNow();
     }
+  }
 
-    @AfterEach
-    void tearDown() {
-        executorService.shutdown();
-        try {
-            if (!executorService.awaitTermination(5, TimeUnit.SECONDS)) {
-                executorService.shutdownNow();
-            }
-        } catch (InterruptedException e) {
-            executorService.shutdownNow();
-        }
-    }
+  @Test
+  void testGetters() {
+    when(mockBlobStore.getBucket()).thenReturn(TEST_BUCKET);
+    when(mockBlobStore.getRegion()).thenReturn(TEST_REGION);
+    when(mockBlobStore.getProviderId()).thenReturn(GcpConstants.PROVIDER_ID);
 
-    @Test
-    void testGetters() {
-        when(mockBlobStore.getBucket()).thenReturn(TEST_BUCKET);
-        when(mockBlobStore.getRegion()).thenReturn(TEST_REGION);
-        when(mockBlobStore.getProviderId()).thenReturn(GcpConstants.PROVIDER_ID);
+    assertEquals(TEST_BUCKET, gcpAsyncBlobStore.getBucket());
+    assertEquals(TEST_REGION, gcpAsyncBlobStore.getRegion());
+    assertEquals(GcpConstants.PROVIDER_ID, gcpAsyncBlobStore.getProviderId());
+    assertEquals(mockBlobStore, gcpAsyncBlobStore.getBlobStore());
+    assertEquals(executorService, gcpAsyncBlobStore.getExecutorService());
+  }
 
-        assertEquals(TEST_BUCKET, gcpAsyncBlobStore.getBucket());
-        assertEquals(TEST_REGION, gcpAsyncBlobStore.getRegion());
-        assertEquals(GcpConstants.PROVIDER_ID, gcpAsyncBlobStore.getProviderId());
-        assertEquals(mockBlobStore, gcpAsyncBlobStore.getBlobStore());
-        assertEquals(executorService, gcpAsyncBlobStore.getExecutorService());
-    }
+  @Test
+  void testConstructorWithNullExecutor() {
+    GcpAsyncBlobStore asyncStore =
+        new GcpAsyncBlobStore(mockBlobStore, null, mockStorage, mockTransformerSupplier);
+    assertNotNull(asyncStore.getExecutorService());
+    // Should use ForkJoinPool.commonPool() when null is passed
+  }
 
-    @Test
-    void testConstructorWithNullExecutor() {
-        GcpAsyncBlobStore asyncStore = new GcpAsyncBlobStore(mockBlobStore, null, mockStorage, mockTransformerSupplier);
-        assertNotNull(asyncStore.getExecutorService());
-        // Should use ForkJoinPool.commonPool() when null is passed
-    }
+  @Test
+  void testUploadWithInputStream() throws Exception {
+    // Given
+    UploadRequest uploadRequest = UploadRequest.builder().withKey(TEST_KEY).build();
+    UploadResponse expectedResponse =
+        UploadResponse.builder().key(TEST_KEY).eTag("test-etag").build();
+    ByteArrayInputStream inputStream = new ByteArrayInputStream("test content".getBytes());
 
-    @Test
-    void testUploadWithInputStream() throws Exception {
-        // Given
-        UploadRequest uploadRequest = UploadRequest.builder().withKey(TEST_KEY).build();
-        UploadResponse expectedResponse = UploadResponse.builder()
-                .key(TEST_KEY)
-                .eTag("test-etag")
-                .build();
-        ByteArrayInputStream inputStream = new ByteArrayInputStream("test content".getBytes());
+    when(mockBlobStore.upload(uploadRequest, inputStream)).thenReturn(expectedResponse);
 
-        when(mockBlobStore.upload(uploadRequest, inputStream)).thenReturn(expectedResponse);
+    // When
+    CompletableFuture<UploadResponse> result = gcpAsyncBlobStore.upload(uploadRequest, inputStream);
 
-        // When
-        CompletableFuture<UploadResponse> result = gcpAsyncBlobStore.upload(uploadRequest, inputStream);
+    // Then
+    UploadResponse actualResponse = result.get(5, TimeUnit.SECONDS);
+    assertEquals(expectedResponse, actualResponse);
+    verify(mockBlobStore).upload(uploadRequest, inputStream);
+  }
 
-        // Then
-        UploadResponse actualResponse = result.get(5, TimeUnit.SECONDS);
-        assertEquals(expectedResponse, actualResponse);
-        verify(mockBlobStore).upload(uploadRequest, inputStream);
-    }
+  @Test
+  void testUploadWithByteArray() throws Exception {
+    // Given
+    UploadRequest uploadRequest = UploadRequest.builder().withKey(TEST_KEY).build();
+    UploadResponse expectedResponse =
+        UploadResponse.builder().key(TEST_KEY).eTag("test-etag").build();
+    byte[] content = "test content".getBytes();
 
-    @Test
-    void testUploadWithByteArray() throws Exception {
-        // Given
-        UploadRequest uploadRequest = UploadRequest.builder().withKey(TEST_KEY).build();
-        UploadResponse expectedResponse = UploadResponse.builder()
-                .key(TEST_KEY)
-                .eTag("test-etag")
-                .build();
-        byte[] content = "test content".getBytes();
+    when(mockBlobStore.upload(uploadRequest, content)).thenReturn(expectedResponse);
 
-        when(mockBlobStore.upload(uploadRequest, content)).thenReturn(expectedResponse);
+    // When
+    CompletableFuture<UploadResponse> result = gcpAsyncBlobStore.upload(uploadRequest, content);
 
-        // When
-        CompletableFuture<UploadResponse> result = gcpAsyncBlobStore.upload(uploadRequest, content);
+    // Then
+    UploadResponse actualResponse = result.get(5, TimeUnit.SECONDS);
+    assertEquals(expectedResponse, actualResponse);
+    verify(mockBlobStore).upload(uploadRequest, content);
+  }
 
-        // Then
-        UploadResponse actualResponse = result.get(5, TimeUnit.SECONDS);
-        assertEquals(expectedResponse, actualResponse);
-        verify(mockBlobStore).upload(uploadRequest, content);
-    }
+  @Test
+  void testUploadWithFile() throws Exception {
+    // Given
+    UploadRequest uploadRequest = UploadRequest.builder().withKey(TEST_KEY).build();
+    UploadResponse expectedResponse =
+        UploadResponse.builder().key(TEST_KEY).eTag("test-etag").build();
+    File testFile = mock(File.class);
 
-    @Test
-    void testUploadWithFile() throws Exception {
-        // Given
-        UploadRequest uploadRequest = UploadRequest.builder().withKey(TEST_KEY).build();
-        UploadResponse expectedResponse = UploadResponse.builder()
-                .key(TEST_KEY)
-                .eTag("test-etag")
-                .build();
-        File testFile = mock(File.class);
+    when(mockBlobStore.upload(uploadRequest, testFile)).thenReturn(expectedResponse);
 
-        when(mockBlobStore.upload(uploadRequest, testFile)).thenReturn(expectedResponse);
+    // When
+    CompletableFuture<UploadResponse> result = gcpAsyncBlobStore.upload(uploadRequest, testFile);
 
-        // When
-        CompletableFuture<UploadResponse> result = gcpAsyncBlobStore.upload(uploadRequest, testFile);
+    // Then
+    UploadResponse actualResponse = result.get(5, TimeUnit.SECONDS);
+    assertEquals(expectedResponse, actualResponse);
+    verify(mockBlobStore).upload(uploadRequest, testFile);
+  }
 
-        // Then
-        UploadResponse actualResponse = result.get(5, TimeUnit.SECONDS);
-        assertEquals(expectedResponse, actualResponse);
-        verify(mockBlobStore).upload(uploadRequest, testFile);
-    }
+  @Test
+  void testUploadWithPath() throws Exception {
+    // Given
+    UploadRequest uploadRequest = UploadRequest.builder().withKey(TEST_KEY).build();
+    UploadResponse expectedResponse =
+        UploadResponse.builder().key(TEST_KEY).eTag("test-etag").build();
+    Path testPath = Paths.get("/test/path");
 
-    @Test
-    void testUploadWithPath() throws Exception {
-        // Given
-        UploadRequest uploadRequest = UploadRequest.builder().withKey(TEST_KEY).build();
-        UploadResponse expectedResponse = UploadResponse.builder()
-                .key(TEST_KEY)
-                .eTag("test-etag")
-                .build();
-        Path testPath = Paths.get("/test/path");
+    when(mockBlobStore.upload(uploadRequest, testPath)).thenReturn(expectedResponse);
 
-        when(mockBlobStore.upload(uploadRequest, testPath)).thenReturn(expectedResponse);
+    // When
+    CompletableFuture<UploadResponse> result = gcpAsyncBlobStore.upload(uploadRequest, testPath);
 
-        // When
-        CompletableFuture<UploadResponse> result = gcpAsyncBlobStore.upload(uploadRequest, testPath);
+    // Then
+    UploadResponse actualResponse = result.get(5, TimeUnit.SECONDS);
+    assertEquals(expectedResponse, actualResponse);
+    verify(mockBlobStore).upload(uploadRequest, testPath);
+  }
 
-        // Then
-        UploadResponse actualResponse = result.get(5, TimeUnit.SECONDS);
-        assertEquals(expectedResponse, actualResponse);
-        verify(mockBlobStore).upload(uploadRequest, testPath);
-    }
+  @Test
+  void testDownloadWithOutputStream() throws Exception {
+    // Given
+    DownloadRequest downloadRequest = DownloadRequest.builder().withKey(TEST_KEY).build();
+    DownloadResponse expectedResponse =
+        DownloadResponse.builder()
+            .key(TEST_KEY)
+            .metadata(BlobMetadata.builder().eTag("test-etag").build())
+            .build();
+    ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
-    @Test
-    void testDownloadWithOutputStream() throws Exception {
-        // Given
-        DownloadRequest downloadRequest = DownloadRequest.builder().withKey(TEST_KEY).build();
-        DownloadResponse expectedResponse = DownloadResponse.builder()
-                .key(TEST_KEY)
-                .metadata(BlobMetadata.builder()
-                        .eTag("test-etag")
-                        .build())
-                .build();
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    when(mockBlobStore.download(downloadRequest, outputStream)).thenReturn(expectedResponse);
 
-        when(mockBlobStore.download(downloadRequest, outputStream)).thenReturn(expectedResponse);
+    // When
+    CompletableFuture<DownloadResponse> result =
+        gcpAsyncBlobStore.download(downloadRequest, outputStream);
 
-        // When
-        CompletableFuture<DownloadResponse> result = gcpAsyncBlobStore.download(downloadRequest, outputStream);
+    // Then
+    DownloadResponse actualResponse = result.get(5, TimeUnit.SECONDS);
+    assertEquals(expectedResponse, actualResponse);
+    verify(mockBlobStore).download(downloadRequest, outputStream);
+  }
 
-        // Then
-        DownloadResponse actualResponse = result.get(5, TimeUnit.SECONDS);
-        assertEquals(expectedResponse, actualResponse);
-        verify(mockBlobStore).download(downloadRequest, outputStream);
-    }
+  @Test
+  void testDownloadWithByteArray() throws Exception {
+    // Given
+    DownloadRequest downloadRequest = DownloadRequest.builder().withKey(TEST_KEY).build();
+    DownloadResponse expectedResponse =
+        DownloadResponse.builder()
+            .key(TEST_KEY)
+            .metadata(BlobMetadata.builder().eTag("test-etag").build())
+            .build();
+    ByteArray byteArray = new ByteArray();
 
-    @Test
-    void testDownloadWithByteArray() throws Exception {
-        // Given
-        DownloadRequest downloadRequest = DownloadRequest.builder().withKey(TEST_KEY).build();
-        DownloadResponse expectedResponse = DownloadResponse.builder()
-                .key(TEST_KEY)
-                .metadata(BlobMetadata.builder()
-                        .eTag("test-etag")
-                        .build())
-                .build();
-        ByteArray byteArray = new ByteArray();
+    when(mockBlobStore.download(downloadRequest, byteArray)).thenReturn(expectedResponse);
 
-        when(mockBlobStore.download(downloadRequest, byteArray)).thenReturn(expectedResponse);
+    // When
+    CompletableFuture<DownloadResponse> result =
+        gcpAsyncBlobStore.download(downloadRequest, byteArray);
 
-        // When
-        CompletableFuture<DownloadResponse> result = gcpAsyncBlobStore.download(downloadRequest, byteArray);
+    // Then
+    DownloadResponse actualResponse = result.get(5, TimeUnit.SECONDS);
+    assertEquals(expectedResponse, actualResponse);
+    verify(mockBlobStore).download(downloadRequest, byteArray);
+  }
 
-        // Then
-        DownloadResponse actualResponse = result.get(5, TimeUnit.SECONDS);
-        assertEquals(expectedResponse, actualResponse);
-        verify(mockBlobStore).download(downloadRequest, byteArray);
-    }
+  @Test
+  void testDeleteWithKeyAndVersion() throws Exception {
+    // Given
+    doNothing().when(mockBlobStore).delete(TEST_KEY, TEST_VERSION_ID);
 
-    @Test
-    void testDeleteWithKeyAndVersion() throws Exception {
-        // Given
-        doNothing().when(mockBlobStore).delete(TEST_KEY, TEST_VERSION_ID);
+    // When
+    CompletableFuture<Void> result = gcpAsyncBlobStore.delete(TEST_KEY, TEST_VERSION_ID);
 
-        // When
-        CompletableFuture<Void> result = gcpAsyncBlobStore.delete(TEST_KEY, TEST_VERSION_ID);
+    // Then
+    result.get(5, TimeUnit.SECONDS);
+    verify(mockBlobStore).delete(TEST_KEY, TEST_VERSION_ID);
+  }
 
-        // Then
-        result.get(5, TimeUnit.SECONDS);
-        verify(mockBlobStore).delete(TEST_KEY, TEST_VERSION_ID);
-    }
+  @Test
+  void testDeleteWithCollection() throws Exception {
+    // Given
+    Collection<BlobIdentifier> identifiers = List.of(new BlobIdentifier(TEST_KEY, TEST_VERSION_ID));
+    doNothing().when(mockBlobStore).delete(identifiers);
 
-    @Test
-    void testDeleteWithCollection() throws Exception {
-        // Given
-        Collection<BlobIdentifier> identifiers = List.of(
-                new BlobIdentifier(TEST_KEY, TEST_VERSION_ID)
-        );
-        doNothing().when(mockBlobStore).delete(identifiers);
+    // When
+    CompletableFuture<Void> result = gcpAsyncBlobStore.delete(identifiers);
 
-        // When
-        CompletableFuture<Void> result = gcpAsyncBlobStore.delete(identifiers);
+    // Then
+    result.get(5, TimeUnit.SECONDS);
+    verify(mockBlobStore).delete(identifiers);
+  }
 
-        // Then
-        result.get(5, TimeUnit.SECONDS);
-        verify(mockBlobStore).delete(identifiers);
-    }
+  @Test
+  void testCopy() throws Exception {
+    // Given
+    CopyRequest copyRequest =
+        CopyRequest.builder().srcKey("source-key").destKey("dest-key").build();
+    CopyResponse expectedResponse =
+        CopyResponse.builder().key("dest-key").eTag("copy-etag").build();
 
-    @Test
-    void testCopy() throws Exception {
-        // Given
-        CopyRequest copyRequest = CopyRequest.builder()
-                .srcKey("source-key")
-                .destKey("dest-key")
-                .build();
-        CopyResponse expectedResponse = CopyResponse.builder()
-                .key("dest-key")
-                .eTag("copy-etag")
-                .build();
+    when(mockBlobStore.copy(copyRequest)).thenReturn(expectedResponse);
 
-        when(mockBlobStore.copy(copyRequest)).thenReturn(expectedResponse);
+    // When
+    CompletableFuture<CopyResponse> result = gcpAsyncBlobStore.copy(copyRequest);
 
-        // When
-        CompletableFuture<CopyResponse> result = gcpAsyncBlobStore.copy(copyRequest);
+    // Then
+    CopyResponse actualResponse = result.get(5, TimeUnit.SECONDS);
+    assertEquals(expectedResponse, actualResponse);
+    verify(mockBlobStore).copy(copyRequest);
+  }
 
-        // Then
-        CopyResponse actualResponse = result.get(5, TimeUnit.SECONDS);
-        assertEquals(expectedResponse, actualResponse);
-        verify(mockBlobStore).copy(copyRequest);
-    }
+  @Test
+  void testGetMetadata() throws Exception {
+    // Given
+    BlobMetadata expectedMetadata =
+        BlobMetadata.builder().key(TEST_KEY).eTag("test-etag").objectSize(1024L).build();
 
-    @Test
-    void testGetMetadata() throws Exception {
-        // Given
-        BlobMetadata expectedMetadata = BlobMetadata.builder()
-                .key(TEST_KEY)
-                .eTag("test-etag")
-                .objectSize(1024L)
-                .build();
+    when(mockBlobStore.getMetadata(TEST_KEY, TEST_VERSION_ID)).thenReturn(expectedMetadata);
 
-        when(mockBlobStore.getMetadata(TEST_KEY, TEST_VERSION_ID)).thenReturn(expectedMetadata);
+    // When
+    CompletableFuture<BlobMetadata> result =
+        gcpAsyncBlobStore.getMetadata(TEST_KEY, TEST_VERSION_ID);
 
-        // When
-        CompletableFuture<BlobMetadata> result = gcpAsyncBlobStore.getMetadata(TEST_KEY, TEST_VERSION_ID);
+    // Then
+    BlobMetadata actualMetadata = result.get(5, TimeUnit.SECONDS);
+    assertEquals(expectedMetadata, actualMetadata);
+    verify(mockBlobStore).getMetadata(TEST_KEY, TEST_VERSION_ID);
+  }
 
-        // Then
-        BlobMetadata actualMetadata = result.get(5, TimeUnit.SECONDS);
-        assertEquals(expectedMetadata, actualMetadata);
-        verify(mockBlobStore).getMetadata(TEST_KEY, TEST_VERSION_ID);
-    }
+  @Test
+  void testList() throws Exception {
+    // Given
+    ListBlobsRequest listRequest = ListBlobsRequest.builder().withPrefix("test-").build();
 
-    @Test
-    void testList() throws Exception {
-        // Given
-        ListBlobsRequest listRequest = ListBlobsRequest.builder().withPrefix("test-").build();
-        
-        // Create mock iterator with test data
-        BlobInfo blob1 = new BlobInfo.Builder().withKey("test-1").withObjectSize(100L).build();
-        BlobInfo blob2 = new BlobInfo.Builder().withKey("test-2").withObjectSize(200L).build();
-        
-        @SuppressWarnings("unchecked")
-        Iterator<BlobInfo> mockIterator = mock(Iterator.class);
-        when(mockIterator.hasNext()).thenReturn(true, true, false);
-        when(mockIterator.next()).thenReturn(blob1, blob2);
-        when(mockBlobStore.list(listRequest)).thenReturn(mockIterator);
+    // Create mock iterator with test data
+    BlobInfo blob1 = new BlobInfo.Builder().withKey("test-1").withObjectSize(100L).build();
+    BlobInfo blob2 = new BlobInfo.Builder().withKey("test-2").withObjectSize(200L).build();
 
-        // Consumer to capture batches
-        AtomicInteger batchCount = new AtomicInteger(0);
-        Consumer<ListBlobsBatch> consumer = batch -> {
-            batchCount.incrementAndGet();
-            assertNotNull(batch);
-            assertNotNull(batch.getBlobs());
+    @SuppressWarnings("unchecked")
+    Iterator<BlobInfo> mockIterator = mock(Iterator.class);
+    when(mockIterator.hasNext()).thenReturn(true, true, false);
+    when(mockIterator.next()).thenReturn(blob1, blob2);
+    when(mockBlobStore.list(listRequest)).thenReturn(mockIterator);
+
+    // Consumer to capture batches
+    AtomicInteger batchCount = new AtomicInteger(0);
+    Consumer<ListBlobsBatch> consumer =
+        batch -> {
+          batchCount.incrementAndGet();
+          assertNotNull(batch);
+          assertNotNull(batch.getBlobs());
         };
 
-        // When
-        CompletableFuture<Void> result = gcpAsyncBlobStore.list(listRequest, consumer);
+    // When
+    CompletableFuture<Void> result = gcpAsyncBlobStore.list(listRequest, consumer);
 
-        // Then
-        result.get(5, TimeUnit.SECONDS);
-        assertTrue(batchCount.get() > 0);
-        verify(mockBlobStore).list(listRequest);
-    }
+    // Then
+    result.get(5, TimeUnit.SECONDS);
+    assertTrue(batchCount.get() > 0);
+    verify(mockBlobStore).list(listRequest);
+  }
 
-    @Test
-    void testGeneratePresignedUrl() throws Exception {
-        // Given
-        PresignedUrlRequest presignedRequest = PresignedUrlRequest.builder()
-                .type(PresignedOperation.UPLOAD)
-                .key(TEST_KEY)
-                .duration(Duration.ofHours(1))
-                .build();
-        URL expectedUrl = new URL("https://example.com/signed-url");
+  @Test
+  void testGeneratePresignedUrl() throws Exception {
+    // Given
+    PresignedUrlRequest presignedRequest =
+        PresignedUrlRequest.builder()
+            .type(PresignedOperation.UPLOAD)
+            .key(TEST_KEY)
+            .duration(Duration.ofHours(1))
+            .build();
+    URL expectedUrl = new URL("https://example.com/signed-url");
 
-        when(mockBlobStore.generatePresignedUrl(presignedRequest)).thenReturn(expectedUrl);
+    when(mockBlobStore.generatePresignedUrl(presignedRequest)).thenReturn(expectedUrl);
 
-        // When
-        CompletableFuture<URL> result = gcpAsyncBlobStore.generatePresignedUrl(presignedRequest);
+    // When
+    CompletableFuture<URL> result = gcpAsyncBlobStore.generatePresignedUrl(presignedRequest);
 
-        // Then
-        URL actualUrl = result.get(5, TimeUnit.SECONDS);
-        assertEquals(expectedUrl, actualUrl);
-        verify(mockBlobStore).generatePresignedUrl(presignedRequest);
-    }
+    // Then
+    URL actualUrl = result.get(5, TimeUnit.SECONDS);
+    assertEquals(expectedUrl, actualUrl);
+    verify(mockBlobStore).generatePresignedUrl(presignedRequest);
+  }
 
-    @Test
-    void testDoesObjectExist() throws Exception {
-        // Given
-        when(mockBlobStore.doesObjectExist(TEST_KEY, TEST_VERSION_ID)).thenReturn(true);
+  @Test
+  void testDoesObjectExist() throws Exception {
+    // Given
+    when(mockBlobStore.doesObjectExist(TEST_KEY, TEST_VERSION_ID)).thenReturn(true);
 
-        // When
-        CompletableFuture<Boolean> result = gcpAsyncBlobStore.doesObjectExist(TEST_KEY, TEST_VERSION_ID);
+    // When
+    CompletableFuture<Boolean> result =
+        gcpAsyncBlobStore.doesObjectExist(TEST_KEY, TEST_VERSION_ID);
 
-        // Then
-        Boolean exists = result.get(5, TimeUnit.SECONDS);
-        assertTrue(exists);
-        verify(mockBlobStore).doesObjectExist(TEST_KEY, TEST_VERSION_ID);
-    }
+    // Then
+    Boolean exists = result.get(5, TimeUnit.SECONDS);
+    assertTrue(exists);
+    verify(mockBlobStore).doesObjectExist(TEST_KEY, TEST_VERSION_ID);
+  }
 
-    @Test
-    void testDoesBucketExist() throws Exception {
-        // Given
-        when(mockBlobStore.doesBucketExist()).thenReturn(true);
+  @Test
+  void testDoesBucketExist() throws Exception {
+    // Given
+    when(mockBlobStore.doesBucketExist()).thenReturn(true);
 
-        // When
-        CompletableFuture<Boolean> result = gcpAsyncBlobStore.doesBucketExist();
+    // When
+    CompletableFuture<Boolean> result = gcpAsyncBlobStore.doesBucketExist();
 
-        // Then
-        Boolean exists = result.get(5, TimeUnit.SECONDS);
-        assertTrue(exists);
-        verify(mockBlobStore).doesBucketExist();
-    }
+    // Then
+    Boolean exists = result.get(5, TimeUnit.SECONDS);
+    assertTrue(exists);
+    verify(mockBlobStore).doesBucketExist();
+  }
 
-    @Test
-    void testDoesBucketExist_BucketDoesNotExist() throws Exception {
-        // Given
-        when(mockBlobStore.doesBucketExist()).thenReturn(false);
+  @Test
+  void testDoesBucketExist_BucketDoesNotExist() throws Exception {
+    // Given
+    when(mockBlobStore.doesBucketExist()).thenReturn(false);
 
-        // When
-        CompletableFuture<Boolean> result = gcpAsyncBlobStore.doesBucketExist();
+    // When
+    CompletableFuture<Boolean> result = gcpAsyncBlobStore.doesBucketExist();
 
-        // Then
-        Boolean exists = result.get(5, TimeUnit.SECONDS);
-        assertFalse(exists);
-        verify(mockBlobStore).doesBucketExist();
-    }
+    // Then
+    Boolean exists = result.get(5, TimeUnit.SECONDS);
+    assertFalse(exists);
+    verify(mockBlobStore).doesBucketExist();
+  }
 
-    @Test
-    void testGetTags() throws Exception {
-        // Given
-        Map<String, String> expectedTags = Map.of("key1", "value1", "key2", "value2");
-        when(mockBlobStore.getTags(TEST_KEY)).thenReturn(expectedTags);
+  @Test
+  void testGetTags() throws Exception {
+    // Given
+    Map<String, String> expectedTags = Map.of("key1", "value1", "key2", "value2");
+    when(mockBlobStore.getTags(TEST_KEY)).thenReturn(expectedTags);
 
-        // When
-        CompletableFuture<Map<String, String>> result = gcpAsyncBlobStore.getTags(TEST_KEY);
+    // When
+    CompletableFuture<Map<String, String>> result = gcpAsyncBlobStore.getTags(TEST_KEY);
 
-        // Then
-        Map<String, String> actualTags = result.get(5, TimeUnit.SECONDS);
-        assertEquals(expectedTags, actualTags);
-        verify(mockBlobStore).getTags(TEST_KEY);
-    }
+    // Then
+    Map<String, String> actualTags = result.get(5, TimeUnit.SECONDS);
+    assertEquals(expectedTags, actualTags);
+    verify(mockBlobStore).getTags(TEST_KEY);
+  }
 
-    @Test
-    void testSetTags() throws Exception {
-        // Given
-        Map<String, String> tags = Map.of("key1", "value1", "key2", "value2");
-        doNothing().when(mockBlobStore).setTags(TEST_KEY, tags);
+  @Test
+  void testSetTags() throws Exception {
+    // Given
+    Map<String, String> tags = Map.of("key1", "value1", "key2", "value2");
+    doNothing().when(mockBlobStore).setTags(TEST_KEY, tags);
 
-        // When
-        CompletableFuture<Void> result = gcpAsyncBlobStore.setTags(TEST_KEY, tags);
+    // When
+    CompletableFuture<Void> result = gcpAsyncBlobStore.setTags(TEST_KEY, tags);
 
-        // Then
-        result.get(5, TimeUnit.SECONDS);
-        verify(mockBlobStore).setTags(TEST_KEY, tags);
-    }
+    // Then
+    result.get(5, TimeUnit.SECONDS);
+    verify(mockBlobStore).setTags(TEST_KEY, tags);
+  }
 
-    @Test
-    void testMultipartUploadOperations() throws Exception {
-        // Test initiate multipart upload
-        MultipartUploadRequest mpuRequest = new MultipartUploadRequest.Builder()
-                .withKey(TEST_KEY)
-                .build();
-        MultipartUpload expectedMpu = MultipartUpload.builder()
-                .bucket(TEST_BUCKET)
-                .key(TEST_KEY)
-                .id("upload-id")
-                .build();
-        when(mockBlobStore.initiateMultipartUpload(mpuRequest)).thenReturn(expectedMpu);
+  @Test
+  void testMultipartUploadOperations() throws Exception {
+    // Test initiate multipart upload
+    MultipartUploadRequest mpuRequest =
+        new MultipartUploadRequest.Builder().withKey(TEST_KEY).build();
+    MultipartUpload expectedMpu =
+        MultipartUpload.builder().bucket(TEST_BUCKET).key(TEST_KEY).id("upload-id").build();
+    when(mockBlobStore.initiateMultipartUpload(mpuRequest)).thenReturn(expectedMpu);
 
-        CompletableFuture<MultipartUpload> initiateResult = gcpAsyncBlobStore.initiateMultipartUpload(mpuRequest);
-        MultipartUpload actualMpu = initiateResult.get(5, TimeUnit.SECONDS);
-        assertEquals(expectedMpu, actualMpu);
+    CompletableFuture<MultipartUpload> initiateResult =
+        gcpAsyncBlobStore.initiateMultipartUpload(mpuRequest);
+    MultipartUpload actualMpu = initiateResult.get(5, TimeUnit.SECONDS);
+    assertEquals(expectedMpu, actualMpu);
 
-        // Test upload part
-        MultipartPart part = new MultipartPart(1, "test data".getBytes());
-        UploadPartResponse expectedPartResponse = new UploadPartResponse(1, "part-etag", 9);
-        when(mockBlobStore.uploadMultipartPart(expectedMpu, part)).thenReturn(expectedPartResponse);
+    // Test upload part
+    MultipartPart part = new MultipartPart(1, "test data".getBytes());
+    UploadPartResponse expectedPartResponse = new UploadPartResponse(1, "part-etag", 9);
+    when(mockBlobStore.uploadMultipartPart(expectedMpu, part)).thenReturn(expectedPartResponse);
 
-        CompletableFuture<UploadPartResponse> uploadPartResult = gcpAsyncBlobStore.uploadMultipartPart(expectedMpu, part);
-        UploadPartResponse actualPartResponse = uploadPartResult.get(5, TimeUnit.SECONDS);
-        assertEquals(expectedPartResponse, actualPartResponse);
+    CompletableFuture<UploadPartResponse> uploadPartResult =
+        gcpAsyncBlobStore.uploadMultipartPart(expectedMpu, part);
+    UploadPartResponse actualPartResponse = uploadPartResult.get(5, TimeUnit.SECONDS);
+    assertEquals(expectedPartResponse, actualPartResponse);
 
-        // Test complete multipart upload
-        List<UploadPartResponse> parts = List.of(expectedPartResponse);
-        MultipartUploadResponse expectedCompleteResponse = new MultipartUploadResponse("final-etag");
-        when(mockBlobStore.completeMultipartUpload(expectedMpu, parts)).thenReturn(expectedCompleteResponse);
+    // Test complete multipart upload
+    List<UploadPartResponse> parts = List.of(expectedPartResponse);
+    MultipartUploadResponse expectedCompleteResponse = new MultipartUploadResponse("final-etag");
+    when(mockBlobStore.completeMultipartUpload(expectedMpu, parts))
+        .thenReturn(expectedCompleteResponse);
 
-        CompletableFuture<MultipartUploadResponse> completeResult = gcpAsyncBlobStore.completeMultipartUpload(expectedMpu, parts);
-        MultipartUploadResponse actualCompleteResponse = completeResult.get(5, TimeUnit.SECONDS);
-        assertEquals(expectedCompleteResponse, actualCompleteResponse);
+    CompletableFuture<MultipartUploadResponse> completeResult =
+        gcpAsyncBlobStore.completeMultipartUpload(expectedMpu, parts);
+    MultipartUploadResponse actualCompleteResponse = completeResult.get(5, TimeUnit.SECONDS);
+    assertEquals(expectedCompleteResponse, actualCompleteResponse);
 
-        // Test list multipart upload
-        when(mockBlobStore.listMultipartUpload(expectedMpu)).thenReturn(parts);
+    // Test list multipart upload
+    when(mockBlobStore.listMultipartUpload(expectedMpu)).thenReturn(parts);
 
-        CompletableFuture<List<UploadPartResponse>> listResult = gcpAsyncBlobStore.listMultipartUpload(expectedMpu);
-        List<UploadPartResponse> actualParts = listResult.get(5, TimeUnit.SECONDS);
-        assertEquals(parts, actualParts);
+    CompletableFuture<List<UploadPartResponse>> listResult =
+        gcpAsyncBlobStore.listMultipartUpload(expectedMpu);
+    List<UploadPartResponse> actualParts = listResult.get(5, TimeUnit.SECONDS);
+    assertEquals(parts, actualParts);
 
-        // Test abort multipart upload
-        doNothing().when(mockBlobStore).abortMultipartUpload(expectedMpu);
+    // Test abort multipart upload
+    doNothing().when(mockBlobStore).abortMultipartUpload(expectedMpu);
 
-        CompletableFuture<Void> abortResult = gcpAsyncBlobStore.abortMultipartUpload(expectedMpu);
-        abortResult.get(5, TimeUnit.SECONDS);
+    CompletableFuture<Void> abortResult = gcpAsyncBlobStore.abortMultipartUpload(expectedMpu);
+    abortResult.get(5, TimeUnit.SECONDS);
 
-        // Verify all calls
-        verify(mockBlobStore).initiateMultipartUpload(mpuRequest);
-        verify(mockBlobStore).uploadMultipartPart(expectedMpu, part);
-        verify(mockBlobStore).completeMultipartUpload(expectedMpu, parts);
-        verify(mockBlobStore).listMultipartUpload(expectedMpu);
-        verify(mockBlobStore).abortMultipartUpload(expectedMpu);
-    }
+    // Verify all calls
+    verify(mockBlobStore).initiateMultipartUpload(mpuRequest);
+    verify(mockBlobStore).uploadMultipartPart(expectedMpu, part);
+    verify(mockBlobStore).completeMultipartUpload(expectedMpu, parts);
+    verify(mockBlobStore).listMultipartUpload(expectedMpu);
+    verify(mockBlobStore).abortMultipartUpload(expectedMpu);
+  }
 
-    @Test
-    void testGetException() {
-        // Given
-        Throwable testException = new RuntimeException("Test exception");
-        Class<? extends SubstrateSdkException> expectedExceptionClass = SubstrateSdkException.class;
-        doReturn(expectedExceptionClass).when(mockBlobStore).getException(testException);
+  @Test
+  void testGetException() {
+    // Given
+    Throwable testException = new RuntimeException("Test exception");
+    Class<? extends SubstrateSdkException> expectedExceptionClass = SubstrateSdkException.class;
+    doReturn(expectedExceptionClass).when(mockBlobStore).getException(testException);
 
-        // When
-        Class<? extends SubstrateSdkException> actualExceptionClass = gcpAsyncBlobStore.getException(testException);
+    // When
+    Class<? extends SubstrateSdkException> actualExceptionClass =
+        gcpAsyncBlobStore.getException(testException);
 
-        // Then
-        assertEquals(expectedExceptionClass, actualExceptionClass);
-        verify(mockBlobStore).getException(testException);
-    }
+    // Then
+    assertEquals(expectedExceptionClass, actualExceptionClass);
+    verify(mockBlobStore).getException(testException);
+  }
 
-    @Test
-    void testAsyncExecutionUsesProvidedExecutor() throws Exception {
-        // Given
-        UploadRequest uploadRequest = UploadRequest.builder().withKey(TEST_KEY).build();
-        UploadResponse expectedResponse = UploadResponse.builder()
-                .key(TEST_KEY)
-                .eTag("test-etag")
-                .build();
-        byte[] content = "test content".getBytes();
+  @Test
+  void testAsyncExecutionUsesProvidedExecutor() throws Exception {
+    // Given
+    UploadRequest uploadRequest = UploadRequest.builder().withKey(TEST_KEY).build();
+    UploadResponse expectedResponse =
+        UploadResponse.builder().key(TEST_KEY).eTag("test-etag").build();
+    byte[] content = "test content".getBytes();
 
-        // Mock the blob store to take some time and capture the thread name
-        AtomicInteger callCount = new AtomicInteger(0);
-        when(mockBlobStore.upload(any(UploadRequest.class), any(byte[].class)))
-                .thenAnswer(invocation -> {
-                    callCount.incrementAndGet();
-                    // Verify we're running on an executor thread, not the main test thread
-                    String threadName = Thread.currentThread().getName();
-                    assertTrue(threadName.startsWith("pool-"), 
-                            "Expected to run on thread pool, but was: " + threadName);
-                    return expectedResponse;
-                });
+    // Mock the blob store to take some time and capture the thread name
+    AtomicInteger callCount = new AtomicInteger(0);
+    when(mockBlobStore.upload(any(UploadRequest.class), any(byte[].class)))
+        .thenAnswer(
+            invocation -> {
+              callCount.incrementAndGet();
+              // Verify we're running on an executor thread, not the main test thread
+              String threadName = Thread.currentThread().getName();
+              assertTrue(
+                  threadName.startsWith("pool-"),
+                  "Expected to run on thread pool, but was: " + threadName);
+              return expectedResponse;
+            });
 
-        // When
-        CompletableFuture<UploadResponse> result = gcpAsyncBlobStore.upload(uploadRequest, content);
+    // When
+    CompletableFuture<UploadResponse> result = gcpAsyncBlobStore.upload(uploadRequest, content);
 
-        // Then
-        UploadResponse actualResponse = result.get(5, TimeUnit.SECONDS);
-        assertEquals(expectedResponse, actualResponse);
-        assertEquals(1, callCount.get());
-        verify(mockBlobStore).upload(uploadRequest, content);
-    }
+    // Then
+    UploadResponse actualResponse = result.get(5, TimeUnit.SECONDS);
+    assertEquals(expectedResponse, actualResponse);
+    assertEquals(1, callCount.get());
+    verify(mockBlobStore).upload(uploadRequest, content);
+  }
 
-    @Test
-    void testBuilder() {
-        // Given
-        var builder = (GcpAsyncBlobStore.Builder)new GcpAsyncBlobStore.Builder()
+  @Test
+  void testBuilder() {
+    // Given
+    var builder =
+        (GcpAsyncBlobStore.Builder)
+            new GcpAsyncBlobStore.Builder()
                 .withStorage(mockStorage)
                 .withTransformerSupplier(new GcpTransformerSupplier())
                 .withExecutorService(executorService)
                 .withBucket(TEST_BUCKET)
                 .withRegion(TEST_REGION);
 
-        // Then
-        assertEquals(GcpConstants.PROVIDER_ID, builder.getProviderId());
-        assertEquals(mockStorage, builder.getStorage());
-        assertNotNull(builder.getTransformerSupplier());
-        assertEquals(TEST_BUCKET, builder.getBucket());
-        assertEquals(TEST_REGION, builder.getRegion());
-        assertEquals(executorService, builder.getExecutorService());
-    }
+    // Then
+    assertEquals(GcpConstants.PROVIDER_ID, builder.getProviderId());
+    assertEquals(mockStorage, builder.getStorage());
+    assertNotNull(builder.getTransformerSupplier());
+    assertEquals(TEST_BUCKET, builder.getBucket());
+    assertEquals(TEST_REGION, builder.getRegion());
+    assertEquals(executorService, builder.getExecutorService());
+  }
 
-    @Test
-    void testBuilderBuild() {
-        // Note: This test would require more complex mocking of GcpBlobStoreBuilder.build()
-        // For now, we'll just test that the builder can be constructed with the required parameters
-        var builder = new GcpAsyncBlobStore.Builder()
-                .withStorage(mockStorage)
-                .withBucket(TEST_BUCKET)
-                .withRegion(TEST_REGION);
+  @Test
+  void testBuilderBuild() {
+    // Note: This test would require more complex mocking of GcpBlobStoreBuilder.build()
+    // For now, we'll just test that the builder can be constructed with the required parameters
+    var builder =
+        new GcpAsyncBlobStore.Builder()
+            .withStorage(mockStorage)
+            .withBucket(TEST_BUCKET)
+            .withRegion(TEST_REGION);
 
-        assertNotNull(builder);
-        assertEquals(GcpConstants.PROVIDER_ID, builder.getProviderId());
-    }
+    assertNotNull(builder);
+    assertEquals(GcpConstants.PROVIDER_ID, builder.getProviderId());
+  }
 
-    @Test
-    void testExceptionHandlingInAsyncOperations() {
-        // Given
-        UploadRequest uploadRequest = UploadRequest.builder().withKey(TEST_KEY).build();
-        byte[] content = "test content".getBytes();
-        RuntimeException expectedException = new RuntimeException("Test exception");
-        
-        when(mockBlobStore.upload(uploadRequest, content)).thenThrow(expectedException);
+  @Test
+  void testExceptionHandlingInAsyncOperations() {
+    // Given
+    UploadRequest uploadRequest = UploadRequest.builder().withKey(TEST_KEY).build();
+    byte[] content = "test content".getBytes();
+    RuntimeException expectedException = new RuntimeException("Test exception");
 
-        // When
-        CompletableFuture<UploadResponse> result = gcpAsyncBlobStore.upload(uploadRequest, content);
+    when(mockBlobStore.upload(uploadRequest, content)).thenThrow(expectedException);
 
-        // Then
-        assertThrows(Exception.class, () -> result.get(5, TimeUnit.SECONDS));
-        verify(mockBlobStore).upload(uploadRequest, content);
-    }
+    // When
+    CompletableFuture<UploadResponse> result = gcpAsyncBlobStore.upload(uploadRequest, content);
 
-    @Test
-    void testUploadDirectory_Success() throws Exception {
-        // Given
-        DirectoryUploadRequest request = DirectoryUploadRequest.builder()
-                .localSourceDirectory("/test/dir")
-                .prefix("uploads/")
-                .includeSubFolders(true)
-                .build();
+    // Then
+    assertThrows(Exception.class, () -> result.get(5, TimeUnit.SECONDS));
+    verify(mockBlobStore).upload(uploadRequest, content);
+  }
 
-        DirectoryUploadResponse expectedResponse = DirectoryUploadResponse.builder()
-                .failedTransfers(List.of())
-                .build();
+  @Test
+  void testUploadDirectory_Success() throws Exception {
+    // Given
+    DirectoryUploadRequest request =
+        DirectoryUploadRequest.builder()
+            .localSourceDirectory("/test/dir")
+            .prefix("uploads/")
+            .includeSubFolders(true)
+            .build();
 
-        // Mock the synchronous blob store to return the expected response
-        when(mockBlobStore.uploadDirectory(request)).thenReturn(expectedResponse);
+    DirectoryUploadResponse expectedResponse =
+        DirectoryUploadResponse.builder().failedTransfers(List.of()).build();
 
-        // When
-        CompletableFuture<DirectoryUploadResponse> result = gcpAsyncBlobStore.uploadDirectory(request);
+    // Mock the synchronous blob store to return the expected response
+    when(mockBlobStore.uploadDirectory(request)).thenReturn(expectedResponse);
 
-        // Then
-        DirectoryUploadResponse response = result.get(5, TimeUnit.SECONDS);
-        assertNotNull(response);
-        assertTrue(response.getFailedTransfers().isEmpty());
-        
-        // Verify that the async method delegates to the synchronous method
-        verify(mockBlobStore).uploadDirectory(request);
-    }
+    // When
+    CompletableFuture<DirectoryUploadResponse> result = gcpAsyncBlobStore.uploadDirectory(request);
 
-    @Test
-    void testUploadDirectory_WithFailures() throws Exception {
-        // Given
-        DirectoryUploadRequest request = DirectoryUploadRequest.builder()
-                .localSourceDirectory("/test/dir")
-                .prefix("uploads/")
-                .includeSubFolders(true)
-                .build();
+    // Then
+    DirectoryUploadResponse response = result.get(5, TimeUnit.SECONDS);
+    assertNotNull(response);
+    assertTrue(response.getFailedTransfers().isEmpty());
 
-        Path file2 = Paths.get("/test/dir/file2.txt");
-        FailedBlobUpload failedUpload = FailedBlobUpload.builder()
-                .source(file2)
-                .exception(new RuntimeException("Upload failed"))
-                .build();
+    // Verify that the async method delegates to the synchronous method
+    verify(mockBlobStore).uploadDirectory(request);
+  }
 
-        DirectoryUploadResponse expectedResponse = DirectoryUploadResponse.builder()
-                .failedTransfers(List.of(failedUpload))
-                .build();
+  @Test
+  void testUploadDirectory_WithFailures() throws Exception {
+    // Given
+    DirectoryUploadRequest request =
+        DirectoryUploadRequest.builder()
+            .localSourceDirectory("/test/dir")
+            .prefix("uploads/")
+            .includeSubFolders(true)
+            .build();
 
-        // Mock the synchronous blob store to return a response with failures
-        when(mockBlobStore.uploadDirectory(request)).thenReturn(expectedResponse);
+    Path file2 = Paths.get("/test/dir/file2.txt");
+    FailedBlobUpload failedUpload =
+        FailedBlobUpload.builder()
+            .source(file2)
+            .exception(new RuntimeException("Upload failed"))
+            .build();
 
-        // When
-        CompletableFuture<DirectoryUploadResponse> result = gcpAsyncBlobStore.uploadDirectory(request);
+    DirectoryUploadResponse expectedResponse =
+        DirectoryUploadResponse.builder().failedTransfers(List.of(failedUpload)).build();
 
-        // Then
-        DirectoryUploadResponse response = result.get(5, TimeUnit.SECONDS);
-        assertNotNull(response);
-        assertEquals(1, response.getFailedTransfers().size());
-        assertEquals(file2, response.getFailedTransfers().get(0).getSource());
-        assertTrue(response.getFailedTransfers().get(0).getException() instanceof RuntimeException);
-        assertEquals("Upload failed", response.getFailedTransfers().get(0).getException().getMessage());
-        
-        // Verify that the async method delegates to the synchronous method
-        verify(mockBlobStore).uploadDirectory(request);
-    }
+    // Mock the synchronous blob store to return a response with failures
+    when(mockBlobStore.uploadDirectory(request)).thenReturn(expectedResponse);
 
-    @Test
-    void testUploadDirectory_EmptyDirectory() throws Exception {
-        // Given
-        DirectoryUploadRequest request = DirectoryUploadRequest.builder()
-                .localSourceDirectory("/test/empty")
-                .prefix("uploads/")
-                .includeSubFolders(true)
-                .build();
+    // When
+    CompletableFuture<DirectoryUploadResponse> result = gcpAsyncBlobStore.uploadDirectory(request);
 
-        DirectoryUploadResponse expectedResponse = DirectoryUploadResponse.builder()
-                .failedTransfers(List.of())
-                .build();
+    // Then
+    DirectoryUploadResponse response = result.get(5, TimeUnit.SECONDS);
+    assertNotNull(response);
+    assertEquals(1, response.getFailedTransfers().size());
+    assertEquals(file2, response.getFailedTransfers().get(0).getSource());
+    assertTrue(response.getFailedTransfers().get(0).getException() instanceof RuntimeException);
+    assertEquals("Upload failed", response.getFailedTransfers().get(0).getException().getMessage());
 
-        // Mock the synchronous blob store to return empty response
-        when(mockBlobStore.uploadDirectory(request)).thenReturn(expectedResponse);
+    // Verify that the async method delegates to the synchronous method
+    verify(mockBlobStore).uploadDirectory(request);
+  }
 
-        // When
-        CompletableFuture<DirectoryUploadResponse> result = gcpAsyncBlobStore.uploadDirectory(request);
+  @Test
+  void testUploadDirectory_EmptyDirectory() throws Exception {
+    // Given
+    DirectoryUploadRequest request =
+        DirectoryUploadRequest.builder()
+            .localSourceDirectory("/test/empty")
+            .prefix("uploads/")
+            .includeSubFolders(true)
+            .build();
 
-        // Then
-        DirectoryUploadResponse response = result.get(5, TimeUnit.SECONDS);
-        assertNotNull(response);
-        assertTrue(response.getFailedTransfers().isEmpty());
-        
-        // Verify that the async method delegates to the synchronous method
-        verify(mockBlobStore).uploadDirectory(request);
-    }
+    DirectoryUploadResponse expectedResponse =
+        DirectoryUploadResponse.builder().failedTransfers(List.of()).build();
 
-    @Test
-    void testUploadDirectory_ExceptionInMainThread() throws Exception {
-        // Given
-        DirectoryUploadRequest request = DirectoryUploadRequest.builder()
-                .localSourceDirectory("/test/dir")
-                .prefix("uploads/")
-                .includeSubFolders(true)
-                .build();
+    // Mock the synchronous blob store to return empty response
+    when(mockBlobStore.uploadDirectory(request)).thenReturn(expectedResponse);
 
-        // Mock the synchronous blob store to throw an exception
-        when(mockBlobStore.uploadDirectory(request)).thenThrow(new RuntimeException("Upload failed"));
+    // When
+    CompletableFuture<DirectoryUploadResponse> result = gcpAsyncBlobStore.uploadDirectory(request);
 
-        // When & Then
-        CompletableFuture<DirectoryUploadResponse> result = gcpAsyncBlobStore.uploadDirectory(request);
-        
-        ExecutionException exception = assertThrows(ExecutionException.class, () -> {
-            result.get(5, TimeUnit.SECONDS);
+    // Then
+    DirectoryUploadResponse response = result.get(5, TimeUnit.SECONDS);
+    assertNotNull(response);
+    assertTrue(response.getFailedTransfers().isEmpty());
+
+    // Verify that the async method delegates to the synchronous method
+    verify(mockBlobStore).uploadDirectory(request);
+  }
+
+  @Test
+  void testUploadDirectory_ExceptionInMainThread() throws Exception {
+    // Given
+    DirectoryUploadRequest request =
+        DirectoryUploadRequest.builder()
+            .localSourceDirectory("/test/dir")
+            .prefix("uploads/")
+            .includeSubFolders(true)
+            .build();
+
+    // Mock the synchronous blob store to throw an exception
+    when(mockBlobStore.uploadDirectory(request)).thenThrow(new RuntimeException("Upload failed"));
+
+    // When & Then
+    CompletableFuture<DirectoryUploadResponse> result = gcpAsyncBlobStore.uploadDirectory(request);
+
+    ExecutionException exception =
+        assertThrows(
+            ExecutionException.class,
+            () -> {
+              result.get(5, TimeUnit.SECONDS);
+            });
+    assertTrue(exception.getCause() instanceof RuntimeException);
+    assertEquals("Upload failed", exception.getCause().getMessage());
+
+    // Verify that the async method delegates to the synchronous method
+    verify(mockBlobStore).uploadDirectory(request);
+  }
+
+  @Test
+  void testDownloadDirectory_Implementation() throws Exception {
+    // Given
+    DirectoryDownloadRequest request =
+        DirectoryDownloadRequest.builder()
+            .prefixToDownload("uploads/")
+            .localDestinationDirectory("/test/dir")
+            .build();
+
+    DirectoryDownloadResponse expectedResponse =
+        DirectoryDownloadResponse.builder().failedTransfers(List.of()).build();
+
+    // Mock the synchronous blob store to return the expected response
+    when(mockBlobStore.downloadDirectory(request)).thenReturn(expectedResponse);
+
+    // When
+    CompletableFuture<DirectoryDownloadResponse> result =
+        gcpAsyncBlobStore.downloadDirectory(request);
+
+    // Then
+    DirectoryDownloadResponse response = result.get(5, TimeUnit.SECONDS);
+    assertNotNull(response);
+    assertTrue(response.getFailedTransfers().isEmpty());
+
+    // Verify that the async method delegates to the synchronous method
+    verify(mockBlobStore).downloadDirectory(request);
+  }
+
+  @Test
+  void testDeleteDirectory_Implementation() {
+    // Given
+    String prefix = "uploads/";
+
+    // Mock the synchronous blob store - deleteDirectory returns void
+    doNothing().when(mockBlobStore).deleteDirectory(prefix);
+
+    // When
+    CompletableFuture<Void> result = gcpAsyncBlobStore.deleteDirectory(prefix);
+
+    // Then
+    assertDoesNotThrow(() -> result.get(5, TimeUnit.SECONDS));
+
+    // Verify that the async method delegates to the synchronous method
+    verify(mockBlobStore).deleteDirectory(prefix);
+  }
+
+  @Test
+  void testDeleteDirectory_EmptyDirectory() {
+    // Given
+    String prefix = "empty-prefix/";
+
+    // Mock the synchronous blob store - deleteDirectory returns void
+    doNothing().when(mockBlobStore).deleteDirectory(prefix);
+
+    // When & Then
+    assertDoesNotThrow(
+        () -> {
+          CompletableFuture<Void> future = gcpAsyncBlobStore.deleteDirectory(prefix);
+          future.get(5, TimeUnit.SECONDS);
         });
-        assertTrue(exception.getCause() instanceof RuntimeException);
-        assertEquals("Upload failed", exception.getCause().getMessage());
-        
-        // Verify that the async method delegates to the synchronous method
-        verify(mockBlobStore).uploadDirectory(request);
-    }
 
-    @Test
-    void testDownloadDirectory_Implementation() throws Exception {
-        // Given
-        DirectoryDownloadRequest request = DirectoryDownloadRequest.builder()
-                .prefixToDownload("uploads/")
-                .localDestinationDirectory("/test/dir")
-                .build();
+    // Verify that the async method delegates to the synchronous method
+    verify(mockBlobStore).deleteDirectory(prefix);
+  }
 
-        DirectoryDownloadResponse expectedResponse = DirectoryDownloadResponse.builder()
-                .failedTransfers(List.of())
-                .build();
+  @Test
+  void testDeleteDirectory_NullPrefix() {
+    // Mock empty blob list for null prefix
+    Page<Blob> mockPage = mock(Page.class);
+    when(mockPage.getValues()).thenReturn(Collections.emptyList());
+    when(mockStorage.list(any(), any(Storage.BlobListOption[].class))).thenReturn(mockPage);
 
-        // Mock the synchronous blob store to return the expected response
-        when(mockBlobStore.downloadDirectory(request)).thenReturn(expectedResponse);
+    GcpTransformer mockTransformer = mock(GcpTransformer.class);
+    when(mockTransformerSupplier.get(any())).thenReturn(mockTransformer);
+    when(mockTransformer.partitionList(any(), anyInt())).thenReturn(Collections.emptyList());
 
-        // When
-        CompletableFuture<DirectoryDownloadResponse> result = gcpAsyncBlobStore.downloadDirectory(request);
-
-        // Then
-        DirectoryDownloadResponse response = result.get(5, TimeUnit.SECONDS);
-        assertNotNull(response);
-        assertTrue(response.getFailedTransfers().isEmpty());
-        
-        // Verify that the async method delegates to the synchronous method
-        verify(mockBlobStore).downloadDirectory(request);
-    }
-
-    @Test
-    void testDeleteDirectory_Implementation() {
-        // Given
-        String prefix = "uploads/";
-        
-        // Mock the synchronous blob store - deleteDirectory returns void
-        doNothing().when(mockBlobStore).deleteDirectory(prefix);
-        
-        // When
-        CompletableFuture<Void> result = gcpAsyncBlobStore.deleteDirectory(prefix);
-        
-        // Then
-        assertDoesNotThrow(() -> result.get(5, TimeUnit.SECONDS));
-        
-        // Verify that the async method delegates to the synchronous method
-        verify(mockBlobStore).deleteDirectory(prefix);
-    }
-
-    @Test
-    void testDeleteDirectory_EmptyDirectory() {
-        // Given
-        String prefix = "empty-prefix/";
-        
-        // Mock the synchronous blob store - deleteDirectory returns void
-        doNothing().when(mockBlobStore).deleteDirectory(prefix);
-        
-        // When & Then
-        assertDoesNotThrow(() -> {
-            CompletableFuture<Void> future = gcpAsyncBlobStore.deleteDirectory(prefix);
-            future.get(5, TimeUnit.SECONDS);
+    assertDoesNotThrow(
+        () -> {
+          CompletableFuture<Void> future = gcpAsyncBlobStore.deleteDirectory(null);
+          future.get(5, TimeUnit.SECONDS);
         });
-        
-        // Verify that the async method delegates to the synchronous method
-        verify(mockBlobStore).deleteDirectory(prefix);
-    }
+  }
 
-    @Test
-    void testDeleteDirectory_NullPrefix() {
-        // Mock empty blob list for null prefix
-        Page<Blob> mockPage = mock(Page.class);
-        when(mockPage.getValues()).thenReturn(Collections.emptyList());
-        when(mockStorage.list(any(), any(Storage.BlobListOption[].class))).thenReturn(mockPage);
-        
-        GcpTransformer mockTransformer = mock(GcpTransformer.class);
-        when(mockTransformerSupplier.get(any())).thenReturn(mockTransformer);
-        when(mockTransformer.partitionList(any(), anyInt())).thenReturn(Collections.emptyList());
-        
-        assertDoesNotThrow(() -> {
-            CompletableFuture<Void> future = gcpAsyncBlobStore.deleteDirectory(null);
-            future.get(5, TimeUnit.SECONDS);
-        });
-    }
+  @Test
+  void testBuilder_WithAllParameters() {
+    GcpBlobStore mockGcpBlobStore = mock(GcpBlobStore.class);
+    when(mockGcpBlobStore.getBucket()).thenReturn("test-bucket");
+    when(mockGcpBlobStore.getRegion()).thenReturn("us-central1");
 
-    @Test
-    void testBuilder_WithAllParameters() {
-        GcpBlobStore mockGcpBlobStore = mock(GcpBlobStore.class);
-        when(mockGcpBlobStore.getBucket()).thenReturn("test-bucket");
-        when(mockGcpBlobStore.getRegion()).thenReturn("us-central1");
-        
-        Storage mockStorage = mock(Storage.class);
-        GcpTransformerSupplier mockSupplier = mock(GcpTransformerSupplier.class);
-        ExecutorService mockExecutor = mock(ExecutorService.class);
-        
-        GcpAsyncBlobStore store = new GcpAsyncBlobStore(mockGcpBlobStore, mockExecutor, mockStorage, mockSupplier);
-        
-        assertNotNull(store);
-        assertEquals("test-bucket", store.getBucket());
-        assertEquals("us-central1", store.getRegion());
-    }
+    Storage mockStorage = mock(Storage.class);
+    GcpTransformerSupplier mockSupplier = mock(GcpTransformerSupplier.class);
+    ExecutorService mockExecutor = mock(ExecutorService.class);
 
-    @Test
-    void testBuilder_WithMinimalParameters() {
-        Storage mockStorage = mock(Storage.class);
-        GcpTransformerSupplier mockSupplier = mock(GcpTransformerSupplier.class);
+    GcpAsyncBlobStore store =
+        new GcpAsyncBlobStore(mockGcpBlobStore, mockExecutor, mockStorage, mockSupplier);
 
-        // Create a mock GcpBlobStore
-        GcpBlobStore mockGcpBlobStore = mock(GcpBlobStore.class);
-        when(mockGcpBlobStore.getBucket()).thenReturn("test-bucket");
-        when(mockGcpBlobStore.getRegion()).thenReturn("us-central1");
+    assertNotNull(store);
+    assertEquals("test-bucket", store.getBucket());
+    assertEquals("us-central1", store.getRegion());
+  }
 
-        GcpAsyncBlobStore store = new GcpAsyncBlobStore(mockGcpBlobStore, null, mockStorage, mockSupplier);
+  @Test
+  void testBuilder_WithMinimalParameters() {
+    Storage mockStorage = mock(Storage.class);
+    GcpTransformerSupplier mockSupplier = mock(GcpTransformerSupplier.class);
 
-        assertNotNull(store);
-        assertEquals("test-bucket", store.getBucket());
-        assertEquals("us-central1", store.getRegion());
-    }
+    // Create a mock GcpBlobStore
+    GcpBlobStore mockGcpBlobStore = mock(GcpBlobStore.class);
+    when(mockGcpBlobStore.getBucket()).thenReturn("test-bucket");
+    when(mockGcpBlobStore.getRegion()).thenReturn("us-central1");
 
-    @Test
-    void testBuilder_CopyFromAsyncBuilder() {
-        // Given - Create an AsyncBlobStoreProvider.Builder with various configurations
-        GcpAsyncBlobStore.Builder builder = new GcpAsyncBlobStore.Builder();
-        builder.withBucket("source-bucket");
-        builder.withRegion("us-west-2");
-        builder.withMaxConnections(100);
-        builder.withSocketTimeout(Duration.ofSeconds(30));
-        builder.withIdleConnectionTimeout(Duration.ofMinutes(5));
-        builder.withExecutorService(executorService);
-        builder.withStorage(mockStorage);
-        builder.withTransformerSupplier(mockTransformerSupplier);
+    GcpAsyncBlobStore store =
+        new GcpAsyncBlobStore(mockGcpBlobStore, null, mockStorage, mockSupplier);
 
-        // When - Build the async blob store which internally calls copyFrom
-        GcpAsyncBlobStore asyncBlobStore = builder.build();
+    assertNotNull(store);
+    assertEquals("test-bucket", store.getBucket());
+    assertEquals("us-central1", store.getRegion());
+  }
 
-        // Then - Verify the configurations were copied to the underlying GcpBlobStore
-        assertNotNull(asyncBlobStore);
-        assertEquals("source-bucket", asyncBlobStore.getBucket());
-        assertEquals("us-west-2", asyncBlobStore.getRegion());
-        assertEquals(GcpConstants.PROVIDER_ID, asyncBlobStore.getProviderId());
+  @Test
+  void testBuilder_CopyFromAsyncBuilder() {
+    // Given - Create an AsyncBlobStoreProvider.Builder with various configurations
+    GcpAsyncBlobStore.Builder builder = new GcpAsyncBlobStore.Builder();
+    builder.withBucket("source-bucket");
+    builder.withRegion("us-west-2");
+    builder.withMaxConnections(100);
+    builder.withSocketTimeout(Duration.ofSeconds(30));
+    builder.withIdleConnectionTimeout(Duration.ofMinutes(5));
+    builder.withExecutorService(executorService);
+    builder.withStorage(mockStorage);
+    builder.withTransformerSupplier(mockTransformerSupplier);
 
-        // Verify the underlying GcpBlobStore was created with all copied configurations
-        GcpBlobStore gcpBlobStore = (GcpBlobStore) asyncBlobStore.getBlobStore();
-        assertNotNull(gcpBlobStore);
-        assertEquals("source-bucket", gcpBlobStore.getBucket());
-        assertEquals("us-west-2", gcpBlobStore.getRegion());
-        assertEquals(GcpConstants.PROVIDER_ID, gcpBlobStore.getProviderId());
+    // When - Build the async blob store which internally calls copyFrom
+    GcpAsyncBlobStore asyncBlobStore = builder.build();
 
-        // Verify all builder configurations were properly copied by checking the builder's state
-        GcpBlobStore.Builder gcpBuilder = (GcpBlobStore.Builder) gcpBlobStore.builder();
-        gcpBuilder.copyFrom(builder);
-        assertEquals("source-bucket", gcpBuilder.getBucket());
-        assertEquals("us-west-2", gcpBuilder.getRegion());
-        assertEquals(100, gcpBuilder.getMaxConnections());
-        assertEquals(Duration.ofSeconds(30), gcpBuilder.getSocketTimeout());
-        assertEquals(Duration.ofMinutes(5), gcpBuilder.getIdleConnectionTimeout());
-    }
+    // Then - Verify the configurations were copied to the underlying GcpBlobStore
+    assertNotNull(asyncBlobStore);
+    assertEquals("source-bucket", asyncBlobStore.getBucket());
+    assertEquals("us-west-2", asyncBlobStore.getRegion());
+    assertEquals(GcpConstants.PROVIDER_ID, asyncBlobStore.getProviderId());
 
-    @Test
-    void testBuilder_CopyFromDoesNotOverrideProviderId() {
-        // Given - Create an AsyncBlobStoreProvider.Builder
-        GcpAsyncBlobStore.Builder builder = new GcpAsyncBlobStore.Builder();
-        builder.withBucket("test-bucket");
-        builder.withRegion("us-central1");
-        builder.withStorage(mockStorage);
-        builder.withTransformerSupplier(mockTransformerSupplier);
+    // Verify the underlying GcpBlobStore was created with all copied configurations
+    GcpBlobStore gcpBlobStore = (GcpBlobStore) asyncBlobStore.getBlobStore();
+    assertNotNull(gcpBlobStore);
+    assertEquals("source-bucket", gcpBlobStore.getBucket());
+    assertEquals("us-west-2", gcpBlobStore.getRegion());
+    assertEquals(GcpConstants.PROVIDER_ID, gcpBlobStore.getProviderId());
 
-        // When - Build the async blob store
-        GcpAsyncBlobStore asyncBlobStore = builder.build();
+    // Verify all builder configurations were properly copied by checking the builder's state
+    GcpBlobStore.Builder gcpBuilder = (GcpBlobStore.Builder) gcpBlobStore.builder();
+    gcpBuilder.copyFrom(builder);
+    assertEquals("source-bucket", gcpBuilder.getBucket());
+    assertEquals("us-west-2", gcpBuilder.getRegion());
+    assertEquals(100, gcpBuilder.getMaxConnections());
+    assertEquals(Duration.ofSeconds(30), gcpBuilder.getSocketTimeout());
+    assertEquals(Duration.ofMinutes(5), gcpBuilder.getIdleConnectionTimeout());
+  }
 
-        // Then - Verify providerId is GCP (not overridden by copyFrom)
-        assertEquals(GcpConstants.PROVIDER_ID, asyncBlobStore.getProviderId());
-        assertEquals(GcpConstants.PROVIDER_ID, asyncBlobStore.getBlobStore().getProviderId());
-    }
-} 
+  @Test
+  void testBuilder_CopyFromDoesNotOverrideProviderId() {
+    // Given - Create an AsyncBlobStoreProvider.Builder
+    GcpAsyncBlobStore.Builder builder = new GcpAsyncBlobStore.Builder();
+    builder.withBucket("test-bucket");
+    builder.withRegion("us-central1");
+    builder.withStorage(mockStorage);
+    builder.withTransformerSupplier(mockTransformerSupplier);
+
+    // When - Build the async blob store
+    GcpAsyncBlobStore asyncBlobStore = builder.build();
+
+    // Then - Verify providerId is GCP (not overridden by copyFrom)
+    assertEquals(GcpConstants.PROVIDER_ID, asyncBlobStore.getProviderId());
+    assertEquals(GcpConstants.PROVIDER_ID, asyncBlobStore.getBlobStore().getProviderId());
+  }
+}
